# router/app.go
@@ -18,6 +18,7 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)   // 增
 	r.GET("/user/deleteUser", service.DeleteUser)   // 删
 	r.POST("/user/updateUser", service.UpdateUser)  // 改
+	r.POST("/user/userLogin", service.UserLogin)    // 用户登录
 
 	return r
 }
